--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "laravel-vite-plugin": "^1.0",
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
+        "primeicons": "^7.0.0",
         "primevue": "^4.3.3",
         "reka-ui": "^2.2.0",
         "tailwind-merge": "^2.5.5",
