refactor: Update Blog module structure and improve asset handling

--- a/Modules/Blog/resources/js/tsconfig.json
+++ b/Modules/Blog/resources/js/tsconfig.json
@@ -1,16 +1,6 @@
 {
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@blog/*": ["./*"],
-      "@/*": ["../../../../resources/js/*"]
-    },
-    "types": [] 
-  },
-  "include": [
-    "./**/*.ts",
-    "./**/*.d.ts",
-    "./**/*.vue"
-  ]
+    "types": ["../../../../resources/js/types", "vue"]
+  }
 }
