--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix"
+        "lint": "eslint . --fix",
+        "modules:register": "node scripts/generate-module-imports.js"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
