--- a/Modules/UserManagement/tsconfig.json
+++ b/Modules/UserManagement/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["../../resources/js/*"],
-      "@$LOWER_NAME$/*": ["./Resources/js/*"],
+      "@usermanagement/*": ["./Resources/js/*"],
       "@modules/*": ["../../Modules/*"]
     },
     "types": ["vite/client"]
