--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "nwidart/laravel-modules": "^12.0",
-        "outhebox/laravel-translations": "^1.3",
+        "santigarcor/laratrust": "^8.4",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
