--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "Modules\\": "Modules/"
+            "Modules\\": "Modules/",
+            "Modules\\UserManagement\\App\\": "Modules/UserManagement/app/"
         }
     },
     "autoload-dev": {
