feat: Implement Business Module with migrations, models, controllers, and routes
- Created Business module with necessary migrations for businesses and user_business tables.
- Added Business model and UserBusiness pivot model for relationships.
- Implemented BusinessController for handling business-related requests.
- Defined API and web routes for business resource.
- Set up permissions and roles for business management.
- Created seeders for initial data population.
- Integrated Inertia.js for frontend rendering with Vue components.
- Added necessary assets and configuration for the Business module.
- Updated module status and dependencies in the project configuration.

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Modules\\": "Modules/",
+            "Modules\\Business\\App\\": "Modules/Business/app/",
             "Modules\\UserManagement\\App\\": "Modules/UserManagement/app/"
         }
     },
