--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Publish Ziggy Configuration
         run: php artisan ziggy:generate
 
+      - name: Register Inertia Pages
+        run: php artisan modules:register-pages
+
       - name: Build Assets
         run: npm run build
 
