feat: Add autoloading for CMS module and update CI workflow to include module autoloading step

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
             "Database\\Seeders\\": "database/seeders/",
             "Modules\\": "Modules/",
             "Modules\\Business\\App\\": "Modules/Business/app/",
+            "Modules\\CMS\\App\\": "Modules/CMS/app/",
             "Modules\\UserManagement\\App\\": "Modules/UserManagement/app/"
         },
         "files": [
