--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Install Node Dependencies
         run: npm ci
 
+      - name: Dump Auutoload Modules
+        run: php artisan modules:update-autoloading
+
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
