--- a/Modules/CMS/package.json
+++ b/Modules/CMS/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@builder.io/sdk-vue": "^4.1.0",
     "@grapesjs/studio-sdk": "^1.0.41",
     "@grapesjs/studio-sdk-plugins": "^1.0.18",
     "grapesjs": "^0.22.6",
