--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
     "tailwind": {
         "config": "tailwind.config.js",
         "css": "resources/css/app.css",
-        "baseColor": "neutral",
+        "baseColor": "rose",
         "cssVariables": true,
         "prefix": ""
     },
