--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,17 +39,20 @@ jobs:
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
 
-      - name: Copy Environment File and Configure Database
-        run: |
-          cp .env.example .env
-          echo "DB_CONNECTION=sqlite" >> .env
-          echo "DB_DATABASE=database/database.sqlite" >> .env
-          touch database/database.sqlite
+      - name: Copy Environment File
+        run: cp .env.example .env
 
-      - name: Generate Application Key and Set Session Driver
-        run: |
-          php artisan key:generate
-          echo "SESSION_DRIVER=file" >> .env
+      - name: Create Database Directory
+        run: mkdir -p database
+
+      - name: Create Database File
+        run: touch database/database.sqlite
+
+      - name: Run Database Migrations
+        run: php artisan migrate --seed --force
+
+      - name: Generate Application Key
+        run: php artisan key:generate
 
       - name: Publish Ziggy Configuration
         run: php artisan ziggy:generate
