feat: Add Deal Show Page with Detailed Information and Related Actions
- Implemented the Deal Show page in Vue with comprehensive deal details including title, description, value, probability, stage, status, and dates.
- Added related information sections for contact, company, owner, activities, tasks, and notes with appropriate links and actions.
- Introduced a delete confirmation dialog for deal deletion.
- Created reusable components: DangerButton, SecondaryButton, InputLabel, Modal, Textarea, and ActionButton for consistent UI.
- Enhanced pagination component with Inertia.js support for better data handling.

--- a/Modules/CRM/tsconfig.json
+++ b/Modules/CRM/tsconfig.json
@@ -13,5 +13,5 @@
     "Resources/js/**/*.ts",
     "Resources/js/**/*.d.ts",
     "Resources/js/**/*.vue"
-  ]
+, "../../resources/js/components/PrimePaginator.vue"  ]
 }
